<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intro2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info2"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="15dp"
        android:text="@string/options" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option2" />
    </RadioGroup>
</LinearLayout>